--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2119,19 +2119,6 @@ config FB_PRE_INIT_FB
 	  Select this option if display contents should be inherited as set by
 	  the bootloader.
 
-config FB_MSM
-	tristate
-	depends on FB && ARCH_MSM
-	select FB_CFB_FILLRECT
-	select FB_CFB_COPYAREA
-	select FB_CFB_IMAGEBLIT
-	default y
-
-config FB_MSM_LCDC
-	bool "Support for integrated LCD controller in qsd8x50"
-	depends on FB_MSM && MSM_MDP31
-	default y
-
 config FB_MX3
        tristate "MX3 Framebuffer support"
        depends on FB && MX3_IPU
@@ -2143,6 +2130,8 @@ config FB_MX3
          This is a framebuffer device for the i.MX31 LCD Controller. So
          far only synchronous displays are supported. If you plan to use
          an LCD display with your i.MX31 system, say Y here.
+
+source "drivers/video/msm/Kconfig"
 
 source "drivers/video/omap/Kconfig"
 
