--- a/drivers/net/wireless/bcm4329/Makefile
+++ b/drivers/net/wireless/bcm4329/Makefile
@@ -11,7 +11,7 @@ DHDOFILES = dhd_linux.o linux_osl.o bcmutils.o dhd_common.o dhd_custom_gpio.o \
 	dhd_linux_sched.o dhd_cdc.o bcmsdh_sdmmc.o bcmsdh.o bcmsdh_linux.o    \
 	bcmsdh_sdmmc_linux.o
 
-obj-$(CONFIG_BCM4329) += dhd.o
-dhd-objs = $(DHDOFILES)
+obj-$(CONFIG_BCM4329) += bcm4329.o
+bcm4329-objs = $(DHDOFILES)
 EXTRA_CFLAGS = $(DHDCFLAGS)
 
