--- a/drivers/net/wireless/bcm4329/Kconfig
+++ b/drivers/net/wireless/bcm4329/Kconfig
@@ -10,14 +10,14 @@ config BCM4329
 	  If you choose to build a module, it'll be called dhd. Say M if
 	  unsure.
 
-config BCM43XX_FW_PATH
+config BCM4329_FW_PATH
 	depends on BCM4329
 	string "Firmware path"
 	default "/system/etc/firmware/fw_bcm4329.bin"
 	---help---
 	  Path to the firmware file.
 
-config BCM43XX_NVRAM_PATH
+config BCM4329_NVRAM_PATH
 	depends on BCM4329
 	string "NVRAM path"
 	default "/proc/calibration"
