--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2149,6 +2149,7 @@ config FB_BROADSHEET
 	  a bridge adapter.
 
 source "drivers/video/omap/Kconfig"
+source "drivers/video/msm/Kconfig"
 
 source "drivers/video/backlight/Kconfig"
 source "drivers/video/display/Kconfig"
