rpc: Enable RPC
Signed-off-by: Zach Pfeffer <zpfeffer@quicinc.com>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -20,5 +20,9 @@ else
 endif
 
 obj-$(CONFIG_MSM_SMD) += smd.o
+obj-$(CONFIG_MSM_ONCRPCROUTER) += smd_rpcrouter.o
+obj-$(CONFIG_MSM_ONCRPCROUTER) += smd_rpcrouter_device.o
+obj-$(CONFIG_MSM_ONCRPCROUTER) += smd_rpcrouter_servers.o
+obj-$(CONFIG_MSM_ONCRPCROUTER) += smd_rpcrouter_clients.o
 
 obj-y += pcom_stub.o
