fsusb: host: Enable Full-speed USB host
Signed-off-by: Zach Pfeffer <zpfeffer@quicinc.com>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -5,6 +5,9 @@ obj-y += vreg.o
 obj-y += clock.o clock-pcom.o
 obj-y += gpio.o generic_gpio.o
 
+obj-$(CONFIG_USB_FS_HOST) += rpc_fsusb.o
+obj-$(CONFIG_USB_EHCI_MSM) += rpc_hsusb.o
+
 obj-$(CONFIG_MACH_HALIBUT) += board-halibut.o
 obj-$(CONFIG_MACH_QSD8X50_SURF) += board-qsd8x50.o
 obj-$(CONFIG_MACH_QSD8X50_FFA) += board-qsd8x50.o
