msm: hsusb: add serial function driver
Signed-off-by: Haley Teng <Haley_Teng@htc.com>
Cc: Brian Swetland <swetland@google.com>

--- a/drivers/usb/function/Kconfig
+++ b/drivers/usb/function/Kconfig
@@ -46,6 +46,10 @@ config USB_FUNCTION_DIAG
 	boolean "USB MSM7K Diag Function"
 	depends on USB_FUNCTION
 
+config USB_FUNCTION_SERIAL
+	boolean "USB MSM7K Serial Function"
+	depends on USB_FUNCTION
+
 config USB_FUNCTION_ETHER
 	boolean "USB Ethernet Function"
 	depends on USB_FUNCTION
