--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -236,6 +236,7 @@ CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
+# CONFIG_MSM_SMEM_LOG is not set
 CONFIG_MSM_RESET_MODEM=m
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
@@ -243,6 +244,7 @@ CONFIG_MSM_RPCSERVERS=y
 CONFIG_MSM_RPC_PING=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
+CONFIG_MSM_RPCSERVER_TIME_REMOTE=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_HW3D is not set
@@ -767,7 +769,7 @@ CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
 CONFIG_VT_CONSOLE=y
 CONFIG_HW_CONSOLE=y
-# CONFIG_VT_HW_CONSOLE_BINDING is not set
+CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_DEVKMEM=y
 # CONFIG_SERIAL_NONSTANDARD is not set
 
@@ -781,9 +783,8 @@ CONFIG_DEVKMEM=y
 #
 # CONFIG_SERIAL_MAX3100 is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_MSM=y
-CONFIG_SERIAL_MSM_CONSOLE=y
+# CONFIG_SERIAL_MSM_CONSOLE is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -806,6 +807,7 @@ CONFIG_I2C_HELPER_AUTO=y
 #
 # CONFIG_I2C_DESIGNWARE is not set
 # CONFIG_I2C_GPIO is not set
+CONFIG_I2C_MSM=y
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_SIMTEC is not set
 
@@ -900,7 +902,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_SYS_FOPS is not set
 # CONFIG_FB_SVGALIB is not set
 # CONFIG_FB_MACMODES is not set
-# CONFIG_FB_BACKLIGHT is not set
+CONFIG_FB_BACKLIGHT=y
 CONFIG_FB_MODE_HELPERS=y
 CONFIG_FB_TILEBLITTING=y
 
@@ -913,7 +915,7 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_MB862XX is not set
 # CONFIG_FB_BROADSHEET is not set
 CONFIG_FB_MSM=y
-# CONFIG_FB_MSM_BACKLIGHT is not set
+CONFIG_FB_MSM_BACKLIGHT=y
 CONFIG_FB_MSM_LOGO=y
 CONFIG_FB_MSM_LCDC_HW=y
 # CONFIG_FB_MSM_MDP22 is not set
@@ -921,20 +923,20 @@ CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_MDP31=y
 # CONFIG_FB_MSM_MDP40 is not set
 # CONFIG_FB_MSM_EBI2 is not set
-CONFIG_FB_MSM_MDDI=y
+# CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_LCDC=y
 # CONFIG_FB_MSM_EXTMDDI is not set
 CONFIG_FB_MSM_TVOUT=y
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
-CONFIG_FB_MSM_MDDI_AUTO_DETECT=y
+# CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 CONFIG_FB_MSM_LCDC_PANEL=y
 CONFIG_FB_MSM_LCDC_PRISM_WVGA=y
-CONFIG_FB_MSM_LCDC_GORDON_VGA=y
-CONFIG_FB_MSM_LCDC_WXGA=y
-# CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
+# CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
+# CONFIG_FB_MSM_LCDC_WXGA is not set
+CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL=y
 # CONFIG_FB_MSM_LCDC_GORDON_VGA_PANEL is not set
-CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM=y
+# CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA_PORTRAIT is not set
@@ -1055,7 +1057,7 @@ CONFIG_USB_HID=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_ARCH_HAS_HCD=y
 # CONFIG_USB_ARCH_HAS_OHCI is not set
-# CONFIG_USB_ARCH_HAS_EHCI is not set
+CONFIG_USB_ARCH_HAS_EHCI=y
 CONFIG_USB=y
 CONFIG_USB_DEBUG=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
@@ -1077,6 +1079,7 @@ CONFIG_USB_MON=y
 # USB Host Controller Drivers
 #
 # CONFIG_USB_C67X00_HCD is not set
+# CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1760_HCD is not set
@@ -1178,8 +1181,8 @@ CONFIG_MMC_MSM=y
 # CONFIG_MMC_MSM_SDIO_SUPPORT is not set
 # CONFIG_MMC_MSM_CARD_HW_DETECTION is not set
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
-# CONFIG_MMC_MSM_SDC2_SUPPORT is not set
-# CONFIG_MMC_MSM_SDC3_SUPPORT is not set
+CONFIG_MMC_MSM_SDC2_SUPPORT=y
+CONFIG_MMC_MSM_SDC3_SUPPORT=y
 CONFIG_MMC_MSM_SDC4_SUPPORT=y
 # CONFIG_MEMSTICK is not set
 # CONFIG_ACCESSIBILITY is not set
