--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -924,16 +924,18 @@ CONFIG_FB_MSM_MDP31=y
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_LCDC=y
 # CONFIG_FB_MSM_EXTMDDI is not set
-CONFIG_FB_MSM_TVOUT=y
+# CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 CONFIG_FB_MSM_LCDC_PANEL=y
-CONFIG_FB_MSM_LCDC_PRISM_WVGA=y
+# CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
+CONFIG_FB_MSM_LCDC_GRAPEFRUIT_VGA=y
 # CONFIG_FB_MSM_LCDC_WXGA is not set
-CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL=y
+# CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA_PANEL is not set
+CONFIG_FB_MSM_LCDC_GRAPEFRUIT_PANEL=y
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
@@ -945,14 +947,14 @@ CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL=y
 # CONFIG_FB_MSM_PANEL_NONE is not set
 # CONFIG_FB_MSM_LCDC_EXTERNAL_SVGA is not set
 CONFIG_FB_MSM_SECONDARY_PANEL_NONE=y
-CONFIG_FB_MSM_TVOUT_NTSC=y
+# CONFIG_FB_MSM_TVOUT_NTSC is not set
 # CONFIG_FB_MSM_TVOUT_PAL is not set
-CONFIG_FB_MSM_TVOUT_NTSC_M=y
+# CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
 # CONFIG_FB_MSM_TVOUT_PAL_BDGHIN is not set
 # CONFIG_FB_MSM_TVOUT_PAL_M is not set
 # CONFIG_FB_MSM_TVOUT_PAL_N is not set
-# CONFIG_FB_MSM_TVOUT_NONE is not set
+CONFIG_FB_MSM_TVOUT_NONE=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_LTV350QV is not set
