Allow the size of the in-kernel PMEM region to be configured.
Signed-off-by: David Brown <davidb@quicinc.com>

--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -195,6 +195,7 @@ CONFIG_MACH_QSD8X50_FFA=y
 CONFIG_MACH_QSD8X50_COMET=y
 CONFIG_MACH_QSD8X50_GRAPEFRUIT=y
 CONFIG_MSM_STACKED_MEMORY=y
+CONFIG_PMEM_KERNEL_SIZE=16
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
