--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -143,6 +143,14 @@ config MSM_STACKED_MEMORY
 	  memory.  When present this memory bank is used for a high speed
 	  shared memory interface.  When not present regular RAM is used.
 
+config PMEM_KERNEL_SIZE
+	int "PMEM for kernel components (in MB)"
+	default 2
+	depends on ARCH_QSD8X50
+	help
+	  Configures the amount of PMEM for use by kernel components
+	  (in MB; minimum 2MB)
+
 config MSM_AMSS_VERSION
 	int
 	default 6210 if MSM_AMSS_VERSION_6210
