msm: add config option for grapefruit platform
Signed-off-by: Neil Leeder <nleeder@quicinc.com>

--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -193,6 +193,7 @@ CONFIG_ARCH_MSM_SCORPION=y
 CONFIG_MACH_QSD8X50_SURF=y
 CONFIG_MACH_QSD8X50_FFA=y
 CONFIG_MACH_QSD8X50_COMET=y
+CONFIG_MACH_QSD8X50_GRAPEFRUIT=y
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
