msm: audio: 8k: enable msm8k audio driver
Signed-off-by: Dennis Taul <dtaul@quicinc.com>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -38,4 +38,7 @@ obj-$(CONFIG_DEBUG_FS) += pmic_debugfs.o
 
 obj-$(CONFIG_MSM_RPCSERVER_TIME_REMOTE) += rpc_server_time_remote.o
 
+obj-$(CONFIG_DEBUG_FS) += pmic_debugfs.o
+obj-$(CONFIG_QSD_AUDIO) += qdsp6/
+
 obj-y += pcom_stub.o
