--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.31-rc8
+# Linux kernel version: 2.6.31
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -250,13 +250,13 @@ CONFIG_MSM_RPCSERVER_TIME_REMOTE=y
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_HW3D is not set
-# CONFIG_MSM_ADSP is not set
+CONFIG_MSM_ADSP=y
+CONFIG_MSM_ADSP_REPORT_EVENTS=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
 # CONFIG_WIFI_CONTROL_FUNC is not set
 CONFIG_QSD_AUDIO=y
-CONFIG_AUDIO_AAC_PLUS=y
-CONFIG_AUDIO_ENHANCED_AAC_PLUS=y
+# CONFIG_AUDIO_AAC_PLUS is not set
 # CONFIG_CLOCK_BASED_SLEEP_LIMIT is not set
 # CONFIG_MSM_ADM_OFF_AT_POWER_COLLAPSE is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
