msm: cpufreq: Enable frequency scaling
Signed-off-by: Zach Pfeffer <zpfeffer@quicinc.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1243,7 +1243,7 @@ endmenu
 
 menu "CPU Power Management"
 
-if (ARCH_SA1100 || ARCH_INTEGRATOR || ARCH_OMAP || ARCH_PXA || ARCH_S3C64XX)
+if (ARCH_SA1100 || ARCH_INTEGRATOR || ARCH_OMAP || ARCH_PXA || ARCH_S3C64XX || ARCH_MSM)
 
 source "drivers/cpufreq/Kconfig"
 
@@ -1283,6 +1283,14 @@ endif
 source "drivers/cpuidle/Kconfig"
 
 endmenu
+
+config CPU_FREQ_MSM
+	bool
+	depends on CPU_FREQ && ARCH_MSM
+	default y
+	help
+	  This enables the CPUFreq driver for Qualcomm CPUs.
+	  If in doubt, say Y.
 
 menu "Floating point emulation"
 
