--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -1122,6 +1122,20 @@ config MSM_KGSL_DRM
 	bool "Build a DRM interface for the MSM_KGSL driver"
 	depends on MSM_KGSL && DRM
 
+config Q6_VENC
+	tristate "q6 video encoder driver"
+	depends on ARCH_MSM_SCORPION && MSM_DALRPC
+	default m
+	help
+	  Kernel driver for MSM QDSP6 video encoding.
+
+config MSM_Q6VDEC
+	tristate "MSM QDSP6 Video Decoder Driver"
+	depends on ARCH_MSM_SCORPION && MSM_DALRPC
+	default m
+	---help---
+	  This driver provides access to MSM QDSP6 for video frame decoding.
+
 source "drivers/s390/char/Kconfig"
 
 endmenu
