--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -112,6 +112,8 @@ obj-$(CONFIG_JS_RTC)		+= js-rtc.o
 js-rtc-y = rtc.o
 
 obj-$(CONFIG_MSM_KGSL)          += msm_kgsl/
+obj-$(CONFIG_MSM_Q6VDEC)	+= msm_q6vdec.o
+obj-$(CONFIG_Q6_VENC)           += msm_q6venc.o
 
 # Files generated that shall be removed upon make clean
 clean-files := consolemap_deftbl.c defkeymap.c
