--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -838,6 +838,8 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TCG_TPM is not set
 CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_DRM=y
+CONFIG_Q6_VENC=y
+CONFIG_MSM_Q6VDEC=y
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_CHARDEV=y
