--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -1251,7 +1251,7 @@ CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
 CONFIG_MMC_MSM_SDC2_SUPPORT=y
 CONFIG_MMC_MSM_SDC3_SUPPORT=y
-CONFIG_MMC_MSM_SDC4_SUPPORT=y
+# CONFIG_MMC_MSM_SDC4_SUPPORT is not set
 # CONFIG_MEMSTICK is not set
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_NEW_LEDS=y
