switch: port switch class and GPIO drivers from 2.6.29.
Signed-off-by: Dennis Taul <dtaul@quicinc.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1473,6 +1473,8 @@ source "drivers/accessibility/Kconfig"
 
 source "drivers/leds/Kconfig"
 
+source "drivers/switch/Kconfig"
+
 source "drivers/rtc/Kconfig"
 
 source "drivers/dma/Kconfig"
