[ARM] msm: kgsl: Integrate latest driver from Qualcomm.
Fixes several context and command stream management issues.
Fix MMU support, and other fixups.

Change-Id: I384694bd611213e7a14a729f55a35d4e7f921d15
Signed-off-by: Dima Zavin <dima@android.com>

--- a/drivers/video/msm/Kconfig
+++ b/drivers/video/msm/Kconfig
@@ -21,3 +21,11 @@ config GPU_MSM_KGSL
 	  3D graphics driver for QSD8x50 and MSM7x27. Required to
 	  use hardware accelerated OpenGL ES 2.0 and 1.1 on these
 	  chips.
+
+config MSM_KGSL_MMU
+	bool "Turn on MMU for graphics driver "
+	depends on GPU_MSM_KGSL && MMU
+	default n
+	help
+	  If enabled, the GPU driver will allocate memory from vmalloc
+	  and enable the use of GPU MMU, instead of using pmem.
