mahimahi_defconfig: Enable REGULATOR_TPS65023 for power savings
Signed-off-by: Mike Chan <mike@android.com>

--- a/arch/arm/configs/mahimahi_defconfig
+++ b/arch/arm/configs/mahimahi_defconfig
@@ -1130,7 +1130,12 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 #
 CONFIG_RTC_DRV_MSM7X00A=y
 # CONFIG_DMADEVICES is not set
-# CONFIG_REGULATOR is not set
+CONFIG_REGULATOR=y
+CONFIG_REGULATOR_DEBUG=y
+# CONFIG_REGULATOR_FIXED_VOLTAGE is not set
+# CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
+# CONFIG_REGULATOR_BQ24022 is not set
+CONFIG_REGULATOR_TPS65023=y
 # CONFIG_UIO is not set
 CONFIG_STAGING=y
 # CONFIG_STAGING_EXCLUDE_BUILD is not set
