--- a/arch/arm/configs/mahimahi_defconfig
+++ b/arch/arm/configs/mahimahi_defconfig
@@ -794,6 +794,7 @@ CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 # CONFIG_I2C_CHARDEV is not set
 CONFIG_I2C_HELPER_AUTO=y
+CONFIG_SERIAL_BCM_BT_LPM=y
 
 #
 # I2C Hardware Bus support
