defconfig: automatic update
Signed-off-by: Bryan Huntsman <bryanh@quicinc.com>

--- a/arch/arm/configs/qsd8650-st1_defconfig
+++ b/arch/arm/configs/qsd8650-st1_defconfig
@@ -199,6 +199,7 @@ CONFIG_MACH_QSD8X50_FFA=y
 CONFIG_MACH_QSD8X50_COMET=y
 CONFIG_MACH_QSD8X50_GRAPEFRUIT=y
 CONFIG_MACH_QSD8X50_ST1=y
+CONFIG_ST1_EXPERIMENTAL=y
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_PMEM_KERNEL_SIZE=16
 CONFIG_MSM_AMSS_VERSION=6225
