--- a/arch/arm/configs/msm7201a-perf_defconfig
+++ b/arch/arm/configs/msm7201a-perf_defconfig
@@ -931,10 +931,12 @@ CONFIG_FB_MSM_MDDI_AUTO_DETECT=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
 # CONFIG_FB_MSM_LCDC_GRAPEFRUIT_VGA is not set
+# CONFIG_FB_MSM_LCDC_ST1_WXGA is not set
 # CONFIG_FB_MSM_LCDC_WXGA is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GRAPEFRUIT_PANEL is not set
+# CONFIG_FB_MSM_LCDC_ST1_PANEL is not set
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
 CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT=y
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
