--- a/arch/arm/configs/qsd8650-perf_defconfig
+++ b/arch/arm/configs/qsd8650-perf_defconfig
@@ -198,6 +198,7 @@ CONFIG_MACH_QSD8X50_SURF=y
 CONFIG_MACH_QSD8X50_FFA=y
 CONFIG_MACH_QSD8X50_COMET=y
 # CONFIG_MACH_QSD8X50_GRAPEFRUIT is not set
+# CONFIG_MACH_QSD8X50_ST1 is not set
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_PMEM_KERNEL_SIZE=2
 CONFIG_MSM_AMSS_VERSION=6225
@@ -1032,10 +1033,12 @@ CONFIG_FB_MSM_LCDC_PANEL=y
 CONFIG_FB_MSM_LCDC_PRISM_WVGA=y
 CONFIG_FB_MSM_LCDC_GORDON_VGA=y
 CONFIG_FB_MSM_LCDC_GRAPEFRUIT_VGA=y
+CONFIG_FB_MSM_LCDC_ST1_WXGA=y
 CONFIG_FB_MSM_LCDC_WXGA=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_GRAPEFRUIT_PANEL is not set
+# CONFIG_FB_MSM_LCDC_ST1_PANEL is not set
 CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM=y
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
