[ARM] mahimahi_defconfig: Don't compile the cypress tmg touch driver
Change-Id: I1071c56c876463c44ec5e37ea4166a534d2f61fe
Signed-off-by: Dima Zavin <dima@android.com>

--- a/arch/arm/configs/mahimahi_defconfig
+++ b/arch/arm/configs/mahimahi_defconfig
@@ -720,7 +720,7 @@ CONFIG_INPUT_KEYRESET=y
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_CYPRESS_TMG=y
+# CONFIG_TOUCHSCREEN_CYPRESS_TMG is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELAN_I2C_8232 is not set
