[ARM] mahimahi_defconfig: Update defconfig
Change-Id: I332407f5a5888b456a8852e9aa7b693a991b9eaf
Signed-off-by: Dima Zavin <dima@android.com>

--- a/arch/arm/configs/mahimahi_defconfig
+++ b/arch/arm/configs/mahimahi_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.29
-# Mon Oct 19 00:00:27 2009
+# Tue Nov 17 01:32:05 2009
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -197,7 +197,6 @@ CONFIG_MACH_SWORDFISH=y
 CONFIG_MACH_MAHIMAHI=y
 # CONFIG_HTC_HEADSET is not set
 CONFIG_HTC_35MM_JACK=y
-# CONFIG_TROUT_BATTCHG is not set
 CONFIG_HTC_PWRSPLY=y
 # CONFIG_HTC_PWRSINK is not set
 CONFIG_CACHE_FLUSH_RANGE_LIMIT=0x40000
@@ -264,6 +263,7 @@ CONFIG_ARM_THUMBEE=y
 # CONFIG_CPU_BPREDICT_DISABLE is not set
 CONFIG_HAS_TLS_REG=y
 # CONFIG_OUTER_CACHE is not set
+CONFIG_ARM_L1_CACHE_SHIFT=5
 
 #
 # Bus support
@@ -777,6 +777,7 @@ CONFIG_SERIAL_MSM=y
 CONFIG_SERIAL_MSM_CONSOLE=y
 # CONFIG_SERIAL_MSM_CLOCK_CONTROL is not set
 CONFIG_SERIAL_MSM_HS=y
+CONFIG_SERIAL_BCM_BT_LPM=y
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -790,7 +791,6 @@ CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 # CONFIG_I2C_CHARDEV is not set
 CONFIG_I2C_HELPER_AUTO=y
-CONFIG_SERIAL_BCM_BT_LPM=y
 
 #
 # I2C Hardware Bus support
@@ -1245,6 +1245,7 @@ CONFIG_YAFFS_AUTO_YAFFS2=y
 # CONFIG_YAFFS_DISABLE_WIDE_TNODES is not set
 # CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
 CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
+# CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
 # CONFIG_SQUASHFS is not set
