CHROMIUM: Enable the STMicroelectronics acclerometer driver.
config: Enable stm-lis33 configs

STMicroelectronics acclerometer driver.

Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

stm-lis33: Fix include path

Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

stm-lis33: Initial commit

STMicroelectronics accelerometer driver.

Signed-off-by: Tim Gardner <tim.gardner@canonical.com>

Review URL: http://codereview.chromium.org/600046

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -149,3 +149,5 @@ source "drivers/staging/msm/Kconfig"
 
 endif # !STAGING_EXCLUDE_BUILD
 endif # STAGING
+
+source "drivers/staging/stm-lis33/Kconfig"
