--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1669,6 +1669,8 @@ source "net/Kconfig"
 
 source "drivers/Kconfig"
 
+source "chromeos/drivers/Kconfig"
+
 source "fs/Kconfig"
 
 source "arch/arm/Kconfig.debug"
