--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -2117,6 +2117,8 @@ source "net/Kconfig"
 
 source "drivers/Kconfig"
 
+source "chromeos/drivers/Kconfig"
+
 source "drivers/firmware/Kconfig"
 
 source "fs/Kconfig"
