--- a/chromeos/drivers/Kconfig
+++ b/chromeos/drivers/Kconfig
@@ -1,5 +1,6 @@
 menu "Chromeos Supplied Third-Party Device Drivers"
 
 source "chromeos/drivers/ath6kl/Kconfig"
+source "chromeos/drivers/mwifiex/Kconfig"
 
 endmenu
