--- a/chromeos/drivers/Makefile
+++ b/chromeos/drivers/Makefile
@@ -3,6 +3,7 @@
 #
 
 obj-$(CONFIG_ATH6K_LEGACY)	+= ath6kl/
+obj-$(CONFIG_MWIFIEX)	+= mwifiex/
 
 # This is a stupid trick to get kbuild to create chromeos/built-in.o
 obj- += foo.o
