Add tpmd_dev from the tpm-emulator source to the kernel
This adds tpmd_dev from the tpm-emulator source, so we don't have to compile it externally.  It also adds config.h, which unfortunately is not in the source---it's an intermediate compilation result.

Signed-off-by: semenzato@chromium.org

Review URL: http://codereview.chromium.org/1602016

--- a/chromeos/drivers/Makefile
+++ b/chromeos/drivers/Makefile
@@ -4,6 +4,7 @@
 
 obj-$(CONFIG_ATH6K_LEGACY)	+= ath6kl/
 obj-$(CONFIG_MWIFIEX)	+= mwifiex/
+obj-$(CONFIG_TCG_TPM)	+= tpmd_dev/
 
 # This is a stupid trick to get kbuild to create chromeos/built-in.o
 obj- += foo.o
