Allow booting 32-bit kernel with 64-bit EFI BIOS
This adds and enables a Kconfig option (CONFIG_EFI64) which lets 32-bit x86 kernels boot with our 64-bit EFI BIOS. I've tested it on both the EFI BIOS board and the EeePC's legacy BIOS, and the same image works on both.

Review URL: http://codereview.chromium.org/1605022

--- a/arch/x86/configs/i386_defconfig
+++ b/arch/x86/configs/i386_defconfig
@@ -331,6 +331,7 @@ CONFIG_MTRR=y
 # CONFIG_MTRR_SANITIZER is not set
 CONFIG_X86_PAT=y
 CONFIG_EFI=y
+CONFIG_EFI64=y
 CONFIG_SECCOMP=y
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_HZ_100 is not set
@@ -2109,7 +2110,7 @@ CONFIG_EEEPC_LAPTOP=y
 #
 # CONFIG_EDD is not set
 CONFIG_FIRMWARE_MEMMAP=y
-CONFIG_EFI_VARS=y
+# CONFIG_EFI_VARS is not set
 # CONFIG_DELL_RBU is not set
 # CONFIG_DCDBAS is not set
 CONFIG_DMIID=y
