Check in a driver for the Realtek RTS51xx USB card reader.
Add a Kconfig entry for it.

Keep it configured off for now to prevent the USB hangs I see.
I expect a Realtek patch to fix it.

Review URL: http://codereview.chromium.org/1925002

--- a/drivers/usb/storage/Makefile
+++ b/drivers/usb/storage/Makefile
@@ -29,6 +29,7 @@ obj-$(CONFIG_USB_STORAGE_ISD200)	+= ums-isd200.o
 obj-$(CONFIG_USB_STORAGE_JUMPSHOT)	+= ums-jumpshot.o
 obj-$(CONFIG_USB_STORAGE_KARMA)		+= ums-karma.o
 obj-$(CONFIG_USB_STORAGE_ONETOUCH)	+= ums-onetouch.o
+obj-$(CONFIG_USB_STORAGE_REALTEK)	+= ums-realtek.o
 obj-$(CONFIG_USB_STORAGE_SDDR09)	+= ums-sddr09.o
 obj-$(CONFIG_USB_STORAGE_SDDR55)	+= ums-sddr55.o
 obj-$(CONFIG_USB_STORAGE_USBAT)		+= ums-usbat.o
@@ -41,6 +42,7 @@ ums-isd200-objs		:= isd200.o
 ums-jumpshot-objs	:= jumpshot.o
 ums-karma-objs		:= karma.o
 ums-onetouch-objs	:= onetouch.o
+ums-realtek-objs	:= realtek_cr.o
 ums-sddr09-objs		:= sddr09.o
 ums-sddr55-objs		:= sddr55.o
 ums-usbat-objs		:= shuttle_usbat.o
