--- a/drivers/usb/storage/Kconfig
+++ b/drivers/usb/storage/Kconfig
@@ -172,6 +172,15 @@ config USB_STORAGE_CYPRESS_ATACB
 
 	  If this driver is compiled as a module, it will be named ums-cypress.
 
+config USB_STORAGE_REALTEK
+	tristate "Realtek RTS51xx USB card reader"
+	depends on USB_STORAGE
+	---help---
+	  Say Y here to include additional code to support the Realtek RTS51xx
+	  USB card reader in the USB Mass Storage driver.
+
+	  If this driver is compiled as a module, it will be named ums-realtek.
+
 config USB_LIBUSUAL
 	bool "The shared table of common (or usual) storage devices"
 	depends on USB
