--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -28,6 +28,14 @@ config HWMON_VID
 	tristate
 	default n
 
+config SENSORS_BOSCH_BMA150
+	tristate "SMB380/BMA150 acceleration sensor support"
+	depends on I2C
+	default n
+	help
+	  If you say yes here you get support for Bosch Sensortec's
+	  acceleration sensors SMB380/BMA150.
+
 config HWMON_DEBUG_CHIP
 	bool "Hardware Monitoring Chip debugging messages"
 	default n
