CHROMIUM: Add ACPI driver for ChromeOS.
It attaches to chromeos device and creates a sys fs directory tree. Tested by using an ST8 BIOS supplying mock ACPI values.

Used toshiba_acpi.c and thinkpad_acpi.c from the same directory as a very
loose reference

This driver attaches to the Chromeos ACPI device and the exports the values
reported by the ACPI in a sysfs directory
(/sys/devices/platform/chromeos_acpi).

The first version of the driver provides only static information, the values
reported by the driver are the snapshot reported by the ACPI at driver
installation time.

All ACPI values are presented in the string form (numbers as decimal values)
and can be accessed as the contents of the appropriate read only files in the
sysfs directory tree originating in /sys/devices/platform/chromeos_acpi.

Tested on an ST8 with a BIOS mocking ACPI data:

localhost tmp # for f in $(find \
  /sys/devices/platform/chromeos_acpi -type f -name '[A-Z]*');
do
  echo -n " $f : "
  cat $f
  echo
done
 /sys/devices/platform/chromeos_acpi/CHSW : 0
 /sys/devices/platform/chromeos_acpi/HWID : 583CFAC2-D798-45B0-8C52-1397E3717893
 /sys/devices/platform/chromeos_acpi/BINF.0 : 1
 /sys/devices/platform/chromeos_acpi/BINF.1 : 1
 /sys/devices/platform/chromeos_acpi/BINF.2 : 0
 /sys/devices/platform/chromeos_acpi/GPIO.0/GPIO.0 : 1
 /sys/devices/platform/chromeos_acpi/GPIO.0/GPIO.1 : 0
 /sys/devices/platform/chromeos_acpi/GPIO.0/GPIO.2 : 5
 /sys/devices/platform/chromeos_acpi/GPIO.0/GPIO.3 : NM10
 /sys/devices/platform/chromeos_acpi/GPIO.1/GPIO.0 : 2
 /sys/devices/platform/chromeos_acpi/GPIO.1/GPIO.1 : 1
 /sys/devices/platform/chromeos_acpi/GPIO.1/GPIO.2 : 6
 /sys/devices/platform/chromeos_acpi/GPIO.1/GPIO.3 : NM10
 /sys/devices/platform/chromeos_acpi/GPIO.2/GPIO.0 : 3
 /sys/devices/platform/chromeos_acpi/GPIO.2/GPIO.1 : 0
 /sys/devices/platform/chromeos_acpi/GPIO.2/GPIO.2 : 7
 /sys/devices/platform/chromeos_acpi/GPIO.2/GPIO.3 : NM10
 /sys/devices/platform/chromeos_acpi/GPIO.3/GPIO.0 : 256
 /s

--- a/drivers/platform/x86/Kconfig
+++ b/drivers/platform/x86/Kconfig
@@ -537,4 +537,11 @@ config INTEL_SCU_IPC
 	  some embedded Intel x86 platforms. This is not needed for PC-type
 	  machines.
 
+config ACPI_CHROMEOS
+	tristate "ChromeOS specific ACPI extensions"
+	depends on ACPI
+	---help---
+	  This driver adds support for access to certain proprietary hardware
+	  available on from ChromeOS BIOS.
+
 endif # X86_PLATFORM_DEVICES
