--- a/arch/arm/mach-tegra/Makefile
+++ b/arch/arm/mach-tegra/Makefile
@@ -11,6 +11,7 @@ obj-y                                   += powergate.o
 obj-y					+= suspend.o
 obj-y					+= fuse.o
 obj-y                                   += usb_phy.o
+obj-y					+= tegra_i2s_audio.o
 obj-$(CONFIG_FIQ)                       += fiq.o fiq_glue.o
 
 obj-$(CONFIG_ARCH_TEGRA_2x_SOC)         += clock.o
