--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -201,5 +201,11 @@ config REGULATOR_88PM8607
 	help
 	  This driver supports 88PM8607 voltage regulator chips.
 
+config REGULATOR_TPS6586X
+	tristate "TI TPS6586X Power regulators"
+	depends on I2C
+	help
+	  This driver supports TPS6586X voltage regulator chips.
+
 endif
 
