--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -143,6 +143,7 @@ config ARCH_MSM8960
 	select ARCH_MEMORY_PROBE
 	select ARCH_MEMORY_REMOVE
 	select DONT_RESERVE_FROM_MOVABLE_ZONE
+	select FIX_MOVABLE_ZONE
 
 config ARCH_APQ8064
 	bool "APQ8064"
