--- a/arch/arm/configs/msm8660-perf_defconfig
+++ b/arch/arm/configs/msm8660-perf_defconfig
@@ -306,6 +306,7 @@ CONFIG_THERMAL_HWMON=y
 CONFIG_THERMAL_PM8901=y
 CONFIG_THERMAL_PM8058=y
 CONFIG_THERMAL_TSENS=y
+CONFIG_PMIC8058=y
 CONFIG_MARIMBA_CORE=y
 CONFIG_TIMPANI_CODEC=y
 CONFIG_MEDIA_SUPPORT=y
