--- a/arch/arm/configs/qsd-chromeos-st1q-qrdc_defconfig
+++ b/arch/arm/configs/qsd-chromeos-st1q-qrdc_defconfig
@@ -125,6 +125,7 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM is not set
 CONFIG_BATTERY_QCIBAT=y
+CONFIG_PMIC8058=y
 CONFIG_MARIMBA_CORE=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_MEDIA_SUPPORT=y
