--- a/arch/arm/mach-msm/qdsp6v2/Makefile
+++ b/arch/arm/mach-msm/qdsp6v2/Makefile
@@ -12,5 +12,5 @@ obj-y += q6voice.o
 obj-y += snddev_hdmi.o
 obj-y += aac_in.o qcelp_in.o evrc_in.o amrnb_in.o audio_utils.o
 obj-y += audio_mvs.o
-obj-y += audio_wma.o audio_wmapro.o audio_aac.o
+obj-y += audio_wma.o audio_wmapro.o audio_aac.o audio_multi_aac.o
 obj-$(CONFIG_FB_MSM_HDMI_MSM_PANEL) += lpa_if_hdmi.o
