--- a/arch/arm/boot/dts/msm8226-cdp.dts
+++ b/arch/arm/boot/dts/msm8226-cdp.dts
@@ -330,4 +330,9 @@
 &pm8226_chg {
 	qcom,charging-disabled;
 	qcom,use-default-batt-values;
+
+        qcom,bat-if@1200 {
+                status = "disabled";
+        };
 };
+
