--- a/arch/arm/boot/dts/msm-iommu-v0.dtsi
+++ b/arch/arm/boot/dts/msm-iommu-v0.dtsi
@@ -263,14 +263,14 @@
 			reg = <0xfd890000 0x1000>;
 			interrupts = <0 65 0>;
 			qcom,iommu-ctx-mids = <0>;
-			label = "vfe_imgwr";
+			label = "vfe0";
 		};
 
 		qcom,iommu-ctx@fd891000 {
 			reg = <0xfd891000 0x1000>;
 			interrupts = <0 65 0>;
 			qcom,iommu-ctx-mids = <1>;
-			label = "vfe_misc";
+			label = "vfe1";
 		};
 	};
 };
