CHROMIUM: memory: tegra124: Add memory controller driver
Add memory controller driver for Tegra124 Soc. This can help to handle
the memory controller register access.

BUG=none
TEST=Built kernel and boot

Signed-off-by: Danny Huang <dahuang@nvidia.com>

BUG=chrome-os-partner:30851
TEST=verified emc driver loads correctly

Change-Id: Icc3e1b8fdff84ac5f4e9942e2e6c9af152ed4ea4
Signed-off-by: Rhyland Klein <rklein@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/216565
Reviewed-by: Olof Johansson <olofj@chromium.org>

--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -50,4 +50,12 @@ config TEGRA30_MC
 	  analysis, especially for IOMMU/SMMU(System Memory Management
 	  Unit) module.
 
+config TEGRA124_MC
+	bool "Tegra124 Memory Controller(MC) driver"
+	default y
+	depends on ARCH_TEGRA_124_SOC
+	help
+	  This driver is for the Memory Controller(MC) module available
+	  in Tegra124 SoCs.
+
 endif
