--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -58,4 +58,13 @@ config TEGRA124_MC
 	  This driver is for the Memory Controller(MC) module available
 	  in Tegra124 SoCs.
 
+config TEGRA124_EMC
+	bool "Tegra124 External Memory Controller(EMC) driver"
+	default y
+	depends on TEGRA124_MC
+	help
+	  This driver is for the External Memory Controller(EMC) module
+	  available in Tegra124 SoCs.
+
+
 endif
